# rag_system

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  chainlit.md  pyproject.toml  skills-lock.json
.chainlit/: config.toml
.scratch/modular-rag-system/: PRD.md
config/: settings.yaml
docs/adr/: 0001-adaptive-retrieval-with-rule-based-routing.md  0002-qdrant-embedded-as-vector-store.md  0003-parent-child-chunking.md  0004-local-pipeline-cloud-generation.md  0005-chainlit-for-ui.md
docs/agents/: domain.md
docs/research/: appimage_packaging.md  chainlit-data-layer.md  pyside6_async_patterns.md
public/: particles.js  theme.css
src/: main.py
src/core/: config.py  llm_factory.py  rag_engine.py
src/generation/: generator.py
src/ingestion/: chunkers.py  embedder.py  loaders.py  pipeline.py  watcher.py
src/retrieval/: base.py  hybrid.py  hyde.py  reranker.py  semantic.py  stepback.py
src/routing/: router.py
src/storage/: qdrant_store.py  sqlite_data_layer.py  sqlite_store.py
src/ui/: app.py  async_bridge.py  command_dispatcher.py  main_window.py  prototype_main_window.py  settings_dialog.py
tests/: test_aquery_stream_history.py  test_command_dispatcher.py  test_findings.py  test_graceful_degradation.py  test_ingestion.py  test_qdrant_store.py  test_rag_engine_seam.py  test_retrieval.py  test_router.py  test_watcher.py
tests/eval/: golden_queries.json  index_golden_ds.py  run_eval.py  score_pipeline.py
tests/fixtures/: sample.md  sample.py
