[project]
name = "rag-system"
version = "0.1.0"
description = "Local personal knowledge base with adaptive retrieval"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-aws>=0.3",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.0",
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "unstructured>=0.15",
    "PySide6>=6.7",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
start = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
